    - The overload resolution now supports ``static[T]`` params that must be
      evaluable at compile-time.
    - Support for user-defined type classes has been added.
    - The *command syntax* is supported in a lot more contexts.
    - Anonymous iterators are now supported and iterators can capture variables
      of an outer proc.


    Tools improvements
    ------------------

    - c2nim can deal with a subset of C++. Use the ``--cpp`` command line option
      to activate.


2014-02-11 Nimrod Featured in Dr. Dobb's Journal
================================================

Nimrod has been `featured<http://www.drdobbs.com/open-source/nimrod-a-new-systems-programming-languag/240165321>`_
as the cover story in the February 2014 issue of Dr. Dobb's Journal.


2014-01-15 Andreas Rumpf's talk on Nimrod at Strange Loop 2013 is now online
============================================================================

Andreas Rumpf presented *Nimrod: A New Approach to Metaprogramming* at
`Strange Loop 2013<https://thestrangeloop.com/sessions/nimrod-a-new-approach-to-meta-programming>`_.
The `video and slides<http://www.infoq.com/presentations/nimrod>`_
of the talk are now available.      


2013-05-20 New website design!
==============================

A brand new website is now live. All thanks go to Philip Witte and 
Dominik Picheta, Philip Witte for the design of the website (together with
the logo) as well as the HTML and CSS code for his template, and Dominik Picheta
for integrating Philip's design with the ``nimweb`` utility. We're sure you will
agree that Philip's design is beautiful.


2013-05-20 Version 0.9.2 released
=================================

We are pleased to announce that version 0.9.2 of the Nimrod compiler has been
released. This release has attracted by far the most contributions in comparison
to any other release.

This release can be downloaded from `here <download.html>`_.
